// Vitest Snapshot v1

exports[`<AppMenu /> > should match snapshot for horizontal menu 1`] = `
<div>
  <ul
    class="menu menu-horizontal p-0"
    tabindex="0"
  >
    <li>
      <a
        href="/app/contas-bancarias"
        tabindex="0"
      >
        Contas bancárias
      </a>
    </li>
  </ul>
</div>
`;

exports[`<AppMenu /> > should match snapshot for vertical menu 1`] = `
<div>
  <ul
    class="menu dropdown-content rounded-box menu-compact mt-3 w-52 bg-base-100 p-2 shadow"
    tabindex="0"
  >
    <li>
      <a
        href="/app/contas-bancarias"
        tabindex="0"
      >
        Contas bancárias
      </a>
    </li>
  </ul>
</div>
`;
